# pasta

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PASTA-RUST-PRD.md  PERFORMANCE.md  README.md  SAFE_TESTING.md  SIGNING.md  TESTING_IMPROVEMENTS.md  benchmark_operations.py  codecov.yml  flake.nix  measure_startup_time.py  package.json  pasta-prd.md  pyproject.toml  sign-macos.sh  test_pasta.py
.claude/: settings.local.json
.claude/commands/: code.md
.github/: RELEASE_TEMPLATE.md  cliff.toml  dependabot.yml  release-drafter.yml
.github/workflows/: build.yml  claude-code-review.yml  coverage.yml  license-check.yml  release-notes.yml  release.yml  rust.yml  test.yml
docs/: clipboard-monitoring-fix.md  current-state.md  macos-ui-improvements.md  setup-summary.md
scripts/: build_macos.sh  test_imports.py
src/: index.html  main.js  styles.css
src-tauri/: .tarpaulin.toml  CI.md  Cargo.lock.backup  Cargo.toml  Info.plist  Makefile  coverage.sh  deny.toml  rustfmt.toml  tarpaulin.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: additional_tests.rs  app_logic.rs  app_logic_comprehensive_tests.rs  clipboard.rs  clipboard_error_tests.rs  clipboard_mock_tests.rs  clipboard_platform_tests.rs  comprehensive_tests.rs  config.rs  config_debug_tests.rs  config_error_tests.rs  error_tests.rs  helpers.rs  hotkey.rs  init_tests.rs  integration_test_emergency_stop.rs  integration_tests.rs  keyboard.rs  keyboard_advanced_tests.rs  keyboard_execution_tests.rs  keyboard_mock_tests.rs  keyboard_thread_tests.rs  lib.rs  lib_tests.rs  main.rs  mock_keyboard.rs  runtime_mock_tests.rs  tauri_mock_tests.rs  theme.rs  tray.rs  tray_builder_tests.rs  tray_comprehensive_tests.rs  window.rs
src-tauri/tests/: integration_test.rs
src/pasta/: __init__.py  __main__.py
src/pasta/core/: clipboard.py  hotkeys.py  keyboard.py  settings.py  snippets.py  storage.py
src/pasta/gui/: history.py  history_pyside6.py  settings.py  settings_pyside6.py  settings_pyside6_improved.py  tray.py  tray_pyside6.py
src/pasta/gui/resources/: generate_icons.py  generate_icons_from_icon.py  generate_icons_from_logo.py  pasta.icns
src/pasta/utils/: dock_manager.py  permissions.py  platform.py  security.py
tests/: conftest.py  coverage_improvements_summary.md  test_system_isolation.py
tests/integration/: test_app_launch.py  test_clipboard_monitoring_e2e.py  test_emergency_stop_e2e.py  test_history_window_fix_verification.py  test_macos_shortcuts.py  test_macos_ui_integration.py  test_multiline_typing_integration.py  test_paste_operations_e2e.py  test_security_features_e2e.py  test_settings_persistence_e2e.py  test_snippet_system_e2e.py  test_tray_integration.py  test_typing_mode_integration.py
tests/unit/: test_app_context_typing.py  test_clipboard.py  test_clipboard_coverage.py  test_clipboard_history_integration.py  test_clipboard_monitoring_regression.py  test_dialog_focus.py  test_dock_icon_manager.py  test_history_pyside6.py  test_history_window_timestamp_fix.py  test_hotkeys.py  test_hotkeys_coverage.py  test_hotkeys_no_keyboard.py  test_keyboard.py  test_keyboard_comprehensive.py  test_keyboard_multiline.py  test_macos_dialog_behavior.py  test_macos_ui_simple.py  test_main_comprehensive.py  test_multiline_app_behavior.py  test_multiline_failsafe.py  test_paste_content_types.py  test_paste_last_item.py  test_permissions.py  test_permissions_comprehensive.py  test_permissions_coverage.py  test_platform.py  test_platform_comprehensive.py  test_project_structure.py  test_security.py  test_security_comprehensive.py  test_security_coverage.py  test_settings.py  test_settings_coverage.py  test_settings_pyside6.py  test_settings_ui.py  test_settings_ui_improvements.py  test_snippets.py  test_storage.py  test_tray.py  test_tray_icon_indication.py  (+3 more)
