[package]
name = "pasta-rust"
version = "0.1.0"
description = "Pasta - System tray clipboard to keyboard emulator"
authors = ["pasta-rust"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pasta_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
arboard = "3.4"
enigo = "0.2"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"

[package.metadata.bundle]
identifier = "com.pasta.rust"
icon = ["icons/icon.icns", "icons/icon.ico", "icons/icon.png"]

