[package]
name = "pasta"
version = "0.1.0"
description = "Pasta - System tray clipboard to keyboard emulator"
authors = ["pasta"]
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pasta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
arboard = "3.4"
enigo = "0.5"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
dirs = "6.0"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.8"
serial_test = "3.0"

[package.metadata.bundle]
identifier = "com.pasta.app"
icon = ["icons/icon.icns", "icons/icon.ico", "icons/icon.png"]
